# Hopocalypse

./: .gitignore  CMakeLists.txt  README.md
include/core/: BatchRenderer.h  GameState.h
include/entities/: Character.h  Hud.h  Monster.h  MonsterFactory.h  Player.h
include/entities/effects/: Knockback.h  OnFire.h  Paralyzed.h  Shrink.h  Slowed.h  StatusEffect.h
include/environment/: Map.h
include/fx/: AoE.h  Blood.h  DamageNumber.h  DamageNumberManager.h  Explosion.h  Footprint.h  FootprintManager.h  Freeze.h  MuzzleFlash.h  OnFire.h  Paralysis.h  Shell.h  StatusEffect.h
include/util/: AnimUtil.h  HitboxDebugger.h  TextureUtil.h
include/weapons/: Grenade.h  Projectile.h  Weapon.h
src/: Ak47.cpp  Ak47.h  AnimUtil.cpp  AnimUtil.h  AoE.cpp  AoE.h  Barrett50.cpp  Barrett50.h  BatchRenderer.cpp  BatchRenderer.h  Blood.cpp  Blood.h  Character.cpp  Character.h  Famas.cpp  Famas.h  Footprint.cpp  Footprint.h  GameState.cpp  GameState.h  HitboxDebugger.cpp  HitboxDebugger.h  Hud.cpp  Hud.h  Map.cpp  Monster.cpp  Monster.h  MonsterFactory.cpp  MonsterFactory.h  MuzzleFlash.cpp  MuzzleFlash.h  Player.cpp  Player.h  PlayerAnim.cpp  PlayerAnim.h  Projectile.cpp  Projectile.h  ProjectileFactory.cpp  ProjectileFactory.h  RandomUtil.cpp  (+12 more)
src/core/: BatchRenderer.cpp  GameState.cpp  main.cpp
src/entities/: Character.cpp  Hud.cpp  Monster.cpp  MonsterFactory.cpp  Player.cpp
src/environment/: Map.cpp
src/fx/: AoE.cpp  Blood.cpp  DamageNumber.cpp  DamageNumberManager.cpp  Explosion.cpp  Footprint.cpp  FootprintManager.cpp  Freeze.cpp  MuzzleFlash.cpp  OnFire.cpp  Paralysis.cpp  Shell.cpp  StatusEffect.cpp
src/util/: AnimUtil.cpp  HitboxDebugger.cpp  RandomUtil.cpp  RenderUtil.cpp  TextureUtil.cpp
src/weapons/: Grenade.cpp  Projectile.cpp  Weapon.cpp
(+58 files in other folders)
